# mcp-server-legifrance

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  mcp.Dockerfile  mcpo.Dockerfile  pyproject.toml
src/: config.py  health.py  helpers.py  server.py
tests/: conftest.py  test_client.py  test_config.py
