[project]
name = "mcp-server-legifrance"
version = "0.1.0"
description = "MCP server pour legifrance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "typer>=0.12.0",
    "click>=8.1.7",
    "pydantic>=2.0",
    "requests>=2.32.3",
    "load-dotenv>=0.1.0",
]
