[project]
name = "mcp-server-legifrance"
version = "0.1.0"
description = "MCP server pour legifrance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "click>=8.1.7",
    "pydantic>=2.0",
    "requests>=2.32.3",
    "load-dotenv>=0.1.0",
    "tenacity>=9.1.2",
    "fastmcp>=2.3.4",
    "mcp>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-timeout>=2.2.0",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
markers = [
    "timeout: mark test to timeout after given seconds",
]
